welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var T=Array[Color](getMondeHauteur())
  T=tableau()
  for (l <- 1 to getMondeLargeur()){
    gauche()
    avance()
    droite()
    peindre(T)
  }
}

def tableau():Array[Color] = {
  var motif=Array[Color](getMondeHauteur())
  for (compteur <- 0 to getMondeHauteur()-1 ){
    motif(compteur)=getCouleurSol()
    avance()
  }
  return motif
}
def peindre(motif:Array[Color]){
  for (long<- 1 to getMondeHauteur()){
    baisseBrosse()
    setCouleurBrosse(motif(long-1))
    leveBrosse()
    avance()
  }
}